# lagrange

lagrange/: CMakeLists.txt  allocation.c  allocation.h  calculation.c  calculation.h  display.c  display.h  main.c
